testsuite/positive/Issue-git-0442-lib.n
// REFERENCE: Nemerle.Compiler

using Nemerle.Compiler;

macro MatchAaa(expr : PExpr)
{
  match (expr)
  {
    | <[ "aaa" ]> => <[ System.Console.WriteLine("OK") ]>
    | _ => Message.FatalError(expr.Location, "It's not a 'aaa' string");
  }
}